--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 .tiner {
     width: 100px;
     height: 70px;
-    color: black;
+    color: rgb(22, 13, 13);
     font-size: 60px;
     display: flex;
     position: relative;
